@@ -255,7 +255,7 @@ class HttpTransportBase(Transport, medium.SmartClientMedium):
 
         try_again = False
         # The server does not gives us enough data or
-        # bogus-looking result, let's try again with
+        # a bogus-looking result, let's try again with
         # a simpler request if possible.
         if self._range_hint == 'multi':
             self._range_hint = 'single'
